# cjmctl

./: .clang-format  CMakeLists.txt  LICENSE  README.md  format.sh
src/: control_position.c  control_position.h  control_position.hpp  control_velocity.c  control_velocity.h  estimator_velocity.c  estimator_velocity.h  estimator_velocity_dumb.c  estimator_velocity_dumb.h  math_utils.c  math_utils.h  rotation_accumulator.c  rotation_accumulator.h
tools/: dump_serial.py  grapher.example.conf  grapher.py
tools/tester/: main.c  plotter.py
tools/testers/rotation_accumulator_tester/: tester.py
tools/testers/velocity_estimator_tester/: CMakeLists.txt  plotter.py  test.sh
